Fix for tab display on mobile

--- a/assets/css/customisations.scss
+++ b/assets/css/customisations.scss
@@ -880,7 +880,7 @@ button {
     margin-bottom: 15px;
     margin-left: auto;
     margin-right: auto;
-    padding: 15px 50px;
+    padding: 15px 15px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border: none;
